# RL_Brand_Bound_CO

./: .gitignore  CLAUDE.md  GIT_GUIDE.md  README.md  environment.yml  pyproject.toml
config/: base.yaml  dummy.yaml
notebooks/: demo.ipynb
scripts/: check_model.py  collect_demonstrations.py  eval.py  generate_instances.py  ppo.py  pretrain.py  run_env_smoke.py
src/rl_bb/: data.py  envs.py  experts.py  model.py  stage_1_instances.py  stage_2_pretrain.py  stage_3_ppo.py  stage_4_eval.py  utils.py
src/rl_bb/envs/: __init__.py  branching_env.py  dfs.py  rewards.py
src/rl_bb/eval/: __init__.py  aggregate.py  runner.py
src/rl_bb/experts/: __init__.py  collect.py  policies.py
src/rl_bb/instances/: __init__.py  generate.py
src/rl_bb/models/: __init__.py  gcnn.py  inference.py  obs_to_tensors.py
src/rl_bb/training/: __init__.py  dataset.py  gae.py  ppo.py  pretrain.py  rollout.py
src/rl_bb/utils/: __init__.py  config.py  logging_setup.py  paths.py  seeding.py
tests/: conftest.py  test_envs.py  test_eval.py  test_experts.py  test_gcnn.py  test_instances.py  test_ppo.py  test_pretrain.py
