[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl_bb"
version = "0.0.1"
description = "RL-based variable selection for Branch-and-Bound on MILP."
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rl_bb*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle errors, pyflakes, isort

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
